@@ -1,6 +1,8 @@
 Copyright (C) 2017 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_051817_1 - Allow empty call to debug() which will log the current class and function.
+
 saw_042917_1 - Automatic exception traces for empty-argument calls to fatal, error, or warn.
 
 saw_041417_1 - Better handling for multi-line arguments and exceptions.
